--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/refresh"
+        android:title="@string/action_refresh"/>
+    
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="always"
+        android:icon="@drawable/setting_tools"
         android:title="@string/action_settings"/>
 
 </menu>
