--- a/res/layout/fliter_dialog.xml
+++ b/res/layout/fliter_dialog.xml
@@ -4,14 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <TextView android:text="@string/dialog_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    
-    <EditText 
-        android:id="@+id/dialog_number"
-        android:inputType="number"
-        android:layout_width="fill_parent"
+    <TextView android:text="@string/dialog_type" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    <Spinner android:id="@+id/dialog_flitertype"
+        android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         />
+    
     
     <TextView android:text="@string/dialog_fliterinfo" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
     <EditText 
