--- a/res/layout/fliterlist_item.xml
+++ b/res/layout/fliterlist_item.xml
@@ -5,10 +5,12 @@
     android:orientation="vertical" >
     
 	<TextView 
-        android:id="@+id/fliter_number"
+        android:id="@+id/fliter_type"
         android:textIsSelectable="true"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
+		android:textStyle="italic"
+		
         />
 	
 	<TextView 
@@ -16,5 +18,7 @@
         android:textIsSelectable="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="14sp"
         />
 </LinearLayout>
