--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/action_clear"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/trash"
+        android:title="@string/action_clear"/>
+    
+    <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
         android:showAsAction="always"
